Fix small graphical issue

--- a/brickheadz/css/style.css
+++ b/brickheadz/css/style.css
@@ -1366,7 +1366,7 @@ a img.logo-color  {
 |----------------------------------------------------------------------------
 */
 #collection {
-	background-color: #f7f7f7;
+	background-color: #212121;
 	padding: 70px 0;
 }
 /* category filter */
