Revamp Brickheadz collection page

--- a/brickheadz/css/parallax.css
+++ b/brickheadz/css/parallax.css
@@ -27,7 +27,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 	position: relative;
-	color: #fff;
+	color: #FFF;
 }
 /*
 |----------------------------------------------------------------------------
